# RCloud

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: main.yml
database/: files.db  files.db-shm  files.db-wal  tables.sql
logs/: log.txt
src/: main.rs
src/dirs_table/: dirs.rs  mod.rs  prelude.rs
src/files_table/: files.rs  mod.rs  prelude.rs
src/handlers/: config.rs  database.rs  filesystem.rs  mod.rs  server.rs
utils/: debug.sh  filegen.sh  test.sh
