[package]
name = "cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "sqlite"] }
sea-orm = { version = "0.9", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
actix-session = { version = "0.6", features = ["cookie-session"] }
actix-web-httpauth = "0.6"
toml = "0.5.9"
once_cell = "1.1"
actix-files = "0.6"
actix-multipart = "0.4"
actix-cors = "0.6"
futures-util = "0.3.21"
notify = { version = "5.0.0", features = ["serde", "macos_kqueue"], default-features = false }
